feat: update to de version

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,23 @@
 version: '3'
 services:
   umami:
-    image: ghcr.io/umami-software/umami:postgresql-latest
-    ports:
-      - "3000:3000"
+    container_name: umami-core
+    build:
+      context: .
+      dockerfile: Dockerfile
+      args:
+        - DATABASE_TYPE=postgresql
+        - SKIP_DB_CHECK=1
+        - BASE_PATH=${BASE_PATH}
+        - FORCE_SSL=${FORCE_SSL}
+    networks:
+      - dip-ict-airflow_webnet
+      - internalnet
     environment:
       DATABASE_URL: postgresql://umami:umami@db:5432/umami
       DATABASE_TYPE: postgresql
-      APP_SECRET: replace-me-with-a-random-string
+      APP_SECRET: ${APP_SECRET}
+      CLIENT_IP_HEADER: ${CLIENT_IP_HEADER}
     depends_on:
       db:
         condition: service_healthy
@@ -27,6 +37,8 @@ services:
     volumes:
       - umami-db-data:/var/lib/postgresql/data
     restart: always
+    networks:
+      - internalnet
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB}"]
       interval: 5s
@@ -34,3 +46,7 @@ services:
       retries: 5
 volumes:
   umami-db-data:
+networks:
+  dip-ict-airflow_webnet:
+    external: true
+  internalnet:
